--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.7",
+    "firebase": "^9.18.0",
     "postcss": "^8.4.14",
+    "react-firebase-hooks": "^5.1.1",
     "tailwind-gradient-mask-image": "^1.0.0",
     "tailwindcss": "^3.1.6",
     "vite": "^3.0.0"
