--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-router-dom": "^6.9.0",
+    "react-toastify": "^9.1.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
