--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "firebase emulators:start --only functions",
+    "server:win": "set NODE_ENV=development&& npm run serve",
+    "server:linux": "export NODE_ENV=development && npm run serve",
+    "server:macos": "export NODE_ENV=development && npm run serve"
   },
   "dependencies": {
-    "axios": "^1.2.6",
     "framer-motion": "^8.5.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
