Adding typesense support in function

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ src/firebase.js
 serviceAccount.json
 serviceAccount_backend.json
 functions/serviceAccount.json
+functions/typesense.json
+typesense.json
