--- a/functions/package.json
+++ b/functions/package.json
@@ -21,7 +21,8 @@
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0",
     "helmet": "^6.0.1",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "typesense": "^1.5.4"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.0.0"
