--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "framer-motion": "^8.5.4",
     "localforage": "^1.10.0",
+    "lodash-move": "^1.1.1",
     "match-sorter": "^6.3.1",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
