--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "server:macos": "export NODE_ENV=development && npm run serve"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "framer-motion": "^8.5.4",
     "localforage": "^1.10.0",
     "lodash-move": "^1.1.1",
@@ -22,6 +23,7 @@
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-hook-form": "^7.46.1",
     "react-router-dom": "^6.9.0",
     "react-toastify": "9.0.7",
     "sort-by": "^1.2.0"
