--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "server:macos": "export NODE_ENV=development && npm run serve"
   },
   "dependencies": {
+    "dayjs": "^1.11.9",
     "framer-motion": "^8.5.4",
     "localforage": "^1.10.0",
     "lodash-move": "^1.1.1",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-router-dom": "^6.9.0",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "9.0.7",
     "sort-by": "^1.2.0"
   },
