--- a/package.json
+++ b/package.json
@@ -21,13 +21,11 @@
     "match-sorter": "^6.3.1",
     "nookies": "^2.5.2",
     "react": "^18.2.0",
-    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-router-dom": "^6.15.0",
     "react-toastify": "9.1.3",
-    "react-tailwindcss-datepicker": "^1.6.6",
-    "sort-by": "^1.2.0"
+    "react-tailwindcss-datepicker": "^1.6.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
