--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "jest --watchAll",
     "build": "vite build",
     "preview": "vite preview",
     "serve": "firebase emulators:start --only functions",
@@ -13,9 +14,9 @@
     "server:macos": "export NODE_ENV=development && npm run serve"
   },
   "dependencies": {
-    "framer-motion": "^10.16.1",
     "axios": "^1.5.0",
     "dayjs": "^1.11.9",
+    "framer-motion": "^10.16.1",
     "localforage": "^1.10.0",
     "lodash-move": "^1.1.1",
     "match-sorter": "^6.3.1",
@@ -25,8 +26,8 @@
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
     "react-router-dom": "^6.15.0",
-    "react-toastify": "9.1.3",
     "react-tailwindcss-datepicker": "^1.6.6",
+    "react-toastify": "9.1.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
@@ -34,6 +35,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.15",
+    "jest": "^29.6.4",
     "postcss": "^8.4.28",
     "react-firebase-hooks": "^5.1.1",
     "tailwind-gradient-mask-image": "^1.0.0",
