--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "autoprefixer": "^10.4.15",
     "jest": "^29.6.4",
     "postcss": "^8.4.28",
+    "prettier": "3.0.3",
     "react-firebase-hooks": "^5.1.1",
     "tailwind-gradient-mask-image": "^1.0.0",
     "tailwindcss": "^3.3.3",
