--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.4",
     "autoprefixer": "^10.4.15",
+    "eslint": "^8.51.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.33.2",
     "jest": "^29.6.4",
     "postcss": "^8.4.28",
     "prettier": "3.0.3",
