--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "serve": "firebase emulators:start --only functions",
     "server:win": "set NODE_ENV=development&& npm run serve",
     "server:linux": "export NODE_ENV=development && npm run serve",
-    "server:macos": "export NODE_ENV=development && npm run serve"
+    "server:macos": "export NODE_ENV=development && npm run serve",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.5.0",
@@ -44,6 +45,7 @@
     "react-firebase-hooks": "^5.1.1",
     "tailwind-gradient-mask-image": "^1.0.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "husky": "^8.0.0"
   }
 }
