--- a/package.json
+++ b/package.json
@@ -39,13 +39,20 @@
     "eslint": "^8.51.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.33.2",
+    "husky": "^8.0.0",
     "jest": "^29.6.4",
+    "lint-staged": "^14.0.1",
     "postcss": "^8.4.28",
     "prettier": "3.0.3",
     "react-firebase-hooks": "^5.1.1",
     "tailwind-gradient-mask-image": "^1.0.0",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9",
-    "husky": "^8.0.0"
+    "vite": "^4.4.9"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
