--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "server:win": "set NODE_ENV=development&& npm run serve",
     "server:linux": "export NODE_ENV=development && npm run serve",
     "server:macos": "export NODE_ENV=development && npm run serve",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pretty": ""
   },
   "dependencies": {
     "axios": "^1.5.0",
