--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "react-router-dom": "^6.15.0",
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "9.1.3",
-    "sort-by": "^1.2.0",
-    "styled-components": "^6.1.1"
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
