--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.15.0",
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "9.1.3",
