--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.9",
     "framer-motion": "^10.16.1",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "lodash-move": "^1.1.1",
     "match-sorter": "^6.3.1",
     "nookies": "^2.5.2",
