--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^6.15.0",
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "9.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
