--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-instantsearch-dom": "^6.40.4",
     "react-router-dom": "^6.15.0",
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "9.1.3",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "typesense-instantsearch-adapter": "^2.7.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.21",
