--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.16.1",
+    "immer": "^10.0.3",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "lodash-move": "^1.1.1",
