--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.16.1",
+    "i18next": "^23.8.2",
+    "i18next-browser-languagedetector": "^7.2.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "lodash-move": "^1.1.1",
@@ -27,6 +29,7 @@
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-i18next": "^14.0.5",
     "react-router-dom": "^6.15.0",
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "9.1.3",
