--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "server:macos": "export NODE_ENV=development && npm run serve"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.14",
     "axios": "^1.5.0",
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.9",
