--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.9",
+    "dotenv": "^16.4.5",
     "framer-motion": "^10.16.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
