--- a/functions/package.json
+++ b/functions/package.json
@@ -9,23 +9,24 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "16"
+    "node": "18"
   },
   "main": "index.js",
   "dependencies": {
-    "axios": "^1.3.4",
+    "@notionhq/client": "^2.2.14",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "firebase-admin": "^11.5.0",
-    "firebase-functions": "^4.7.0",
-    "helmet": "^6.0.1",
-    "nodemailer": "^6.9.1",
-    "typesense": "^1.5.4"
+    "express": "^4.19.2",
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^5.0.1",
+    "helmet": "^6.2.0",
+    "nodemailer": "^6.9.13",
+    "typesense": "^1.8.2"
   },
   "devDependencies": {
-    "firebase-functions-test": "^3.0.0"
+    "firebase-functions-test": "^3.2.0"
   },
   "private": true
 }
