--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "chroma-js": "^2.4.2",
     "dayjs": "^1.11.9",
     "dotenv": "^16.4.5",
+    "firebase-admin": "^12.1.0",
+    "firebase-functions-test": "^3.2.0",
     "framer-motion": "^10.16.1",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
