--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
 NOTION_INTEGRATION_SECRET=
 NOTION_BLOGS_DATABASE_ID=
-VITE_FIREBASE_NOTION_ENDPOINT=
-VITE_DEVELOPMENT=
+VITE_FIREBASE_NOTION_ENDPOINT=<REPLACE-WITH-POST-ENDPOINT>
