--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.2",
     "firebase-admin": "^11.11.1",
     "firebase-functions": "^5.0.1",
     "helmet": "^6.2.0",
