--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "test": "jest --watchAll",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite build && firebase hosting:channel:deploy",
+    "predeploy": "npm run build",
+    "deploy": "firebase deploy --only hosting,functions",
     "serve": "firebase emulators:start --only functions",
     "server:win": "set NODE_ENV=development&& npm run serve",
     "server:linux": "export NODE_ENV=development && npm run serve",
